--- a/main.tex
+++ b/main.tex
@@ -71,9 +71,9 @@
 % Contact
 \personalinfo{
   \location{Ceará, Brazil}
-  \faEnvelope{\hspace{0.1cm}danielhbrito@outlook.com}\hspace{0.5cm}
-  \faGithub{\hspace{0.1cm}danielbrito.github.io}\hspace{0.5cm}
-  \faGlobe{\hspace{0.1cm}daniel-brito.blogspot.com.br}\hspace{0.5cm}
+  \faEnvelope{\hspace{0.1cm}danielhbrito@outlook.com}\hspace{0.6cm}
+  \faGithub{\hspace{0.1cm}danielbrito.github.io}\hspace{0.6cm}
+  \faGlobe{\hspace{0.1cm}daniel-brito.blogspot.com.br}\hspace{0.6cm}
   \faPaperPlane{\hspace{0.1cm}danielhbrito}
 }
 
@@ -113,10 +113,13 @@
 \cvevent{Program for Beginning Teachers}{Scholarship student: Academic mentoring in programming fundamentals for IT and Engineering courses, which inspired the creation of a YouTube playlist for posting videos about C programming.}{Mar 2019 - Dec 2019}{}
 \smallskip
 
-\cvevent{Program of Academic Initiation}{Scholarship student: Practical studies of 3D modeling and Virtual Reality using Blender.}{Apr 2018 - Dec 2018}{}
-\smallskip
+\vspace{1 mm}
 
-\cvevent{Program of Academic Initiation}{Scholarship student: Front-end development of a platform to help students learn programming.}{Jun 2017 - Dec 2017}{}
+\cvevent{Program of Academic Initiation}{Scholarship student: Practical studies of 3D modeling and Virtual Reality using Blender.}{Apr 2018 - Dec 2018}{}
+
+\vspace{1 mm}
+
+\cvevent{}{Scholarship student: Front-end development of a platform to help students learn programming.}{Jun 2017 - Dec 2017}{}
 
 \divider
 
