--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -21,7 +21,7 @@
 
 \cvevent{OTHER}{}{}{}
 \cvskill{Creative writing}{5}
-\cvskill{Visual arts}{5}
+\cvskill{Visual Arts}{5}
 
 \vspace{2 mm}
 
@@ -41,11 +41,11 @@
 \cvsection{\faStar \hspace{0.3cm} Projects}
 
 %\cvevent{CURRENT PROJECTS}{}{}{}
-\cvevent{HáLugar (Web Development)}{Housing platform for students.}{}{}
+\cvevent{HáLUGAR (Web Development)}{Housing platform for students.}{}{}
 \smallskip
-\cvevent{Aluminions (Visual Arts)}{Creation of characters using aluminum seals.}{}{}
+\cvevent{ALUMINIONS (Visual Arts)}{Creation of characters using aluminum seals.}{}{}
 
 \divider
 
 %\cvevent{PAST PROJECTS}{}{}{}
-\cvevent{Sarau do Grajaú (Cultural activism)}{Mediation of meetings.}{}{}
+\cvevent{SARAU DO GRAJAÚ (Activism)}{Mediation of meetings.}{}{}
