--- a/main.tex
+++ b/main.tex
@@ -110,16 +110,16 @@
 \cvevent{BACHELOR OF COMPUTER SCIENCE}{Federal University of Ceará}{Jan 2017 - Dec 2020}{}
 \smallskip
 
-\cvevent{Program for Beginning Teachers}{Scholarship student: Academic mentoring in programming fundamentals for IT and Engineering courses, which inspired the creation of a YouTube playlist for posting videos about C programming.}{Mar 2019 - Dec 2019}{}
+\cvevent{Scholarship student}{Program for Beginning Teachers: Academic mentoring in programming fundamentals for IT and Engineering courses.}{Mar 2019 - Dec 2019}{}
 \smallskip
 
 \vspace{1 mm}
 
-\cvevent{Program of Academic Initiation}{Scholarship student: Practical studies of 3D modeling and Virtual Reality using Blender.}{Apr 2018 - Dec 2018}{}
+\cvevent{}{Program of Academic Initiation: Practical studies of 3D modeling and Virtual Reality using Blender.}{Apr 2018 - Dec 2018}{}
 
 \vspace{1 mm}
 
-\cvevent{}{Scholarship student: Front-end development of a platform to help students learn programming.}{Jun 2017 - Dec 2017}{}
+\cvevent{}{Program of Academic Initiation: Front-end development of a platform to help students learn programming.}{Jun 2017 - Dec 2017}{}
 
 \divider
 
