--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -1,39 +1,38 @@
 % AWARDS
 \cvsection{\faTrophy \hspace{0.3cm} Awards}
 \begin{itemize}
-\item Best Work in Practical studies of 3D modeling and Virtual Reality using Blender during the third edition of Encontros Universitários at the Federal University of Ceará - Crateús Campus.
+\item Best Work in Practical studies of 3D modeling and Virtual Reality using Blender during the 3rd edition of Encontros Universitários at the Federal University of Ceará - Crateús Campus.
 \smallskip
 \item Champion of the Slam do 13 (June 2016 edition) in the category of short poems.
 \end{itemize}
 
 % SKILLS
 \cvsection{\faCheck \hspace{0.3cm}Skills}
-\cvevent{TECHNOLOGY}{}{}{}
+
 \cvskill{C, Java}{4}
 \cvskill{HTML, CSS, Bootstrap}{4}
 \cvskill{Linux, Windows}{4}
-\cvskill{Photoshop, Blender}{4}
+\cvskill{Photoshop, Blender}{3}
+\cvskill{Android, Flutter}{3}
 \cvskill{JavaScript, Python, C++, Git}{3}
-\cvskill{MySQL, Vue.js, Haskell}{2}
-\cvskill{Prolog, Processing}{1}
+\cvskill{MySQL, Vue.js}{2}
 \smallskip
 \divider
 
-\cvevent{OTHER}{}{}{}
 \cvskill{Creative writing}{5}
 \cvskill{Visual Arts}{5}
 
 \vspace{2 mm}
 
-% PUBLICATIONS
-\cvsection{\faBook \hspace{0.3cm}Publications}
+% BOOKS
+\cvsection{\faBook \hspace{0.3cm} Publications}
 \cvevent{A LER VAZIOS}{Poetic-visual experiments}{2016}{}
 \smallskip
 \cvevent{PROTESTIZANDO}{Compilation of poems}{2015}{}
 \smallskip
 \cvevent{ANTHOLOGIES}{}{}{}
 \begin{itemize}
-\item Poesia na Faixa (Poetas do Tietê).
+\item Poesia na Faixa (Poetas do Tietê)
 \item 180 gramas (Sarau do Vinil)
 \end{itemize}
 
@@ -41,11 +40,13 @@
 \cvsection{\faStar \hspace{0.3cm} Projects}
 
 %\cvevent{CURRENT PROJECTS}{}{}{}
-\cvevent{HáLUGAR (Web Development)}{Housing platform for students.}{}{}
+\cvevent{HáLUGAR (Development)}{Housing app for students.}{}{}
 \smallskip
 \cvevent{ALUMINIONS (Visual Arts)}{Creation of characters using aluminum seals.}{}{}
+\cvevent{YOUTUBE CHANNEL (Education)}{Programming tutorials for beginners.}{}{}
+\smallskip
 
 \divider
 
 %\cvevent{PAST PROJECTS}{}{}{}
-\cvevent{SARAU DO GRAJAÚ (Activism)}{Mediation of meetings.}{}{}
+\cvevent{SARAU DO GRAJAÚ (Artivism)}{Mediation of meetings.}{}{}
