--- a/main.tex
+++ b/main.tex
@@ -30,7 +30,7 @@
 %% See texdoc.net/pkg/fontawecome and http://texdoc.net/pkg/academicons for full list of symbols. You MUST compile with XeLaTeX or LuaLaTeX if you want to use academicons.
 
 % Change the page layout if you need to
-\geometry{left=2cm,right=10cm,marginparwidth=6.8cm,marginparsep=1.2cm,top=1.25cm,bottom=1.25cm}
+\geometry{left=1.1cm,right=10cm,marginparwidth=8cm,marginparsep=0.8cm,top=1cm,bottom=1cm}
 
 % Change the font if you want to, depending on whether
 % you're using pdflatex or xelatex/lualatex
@@ -66,14 +66,14 @@
 
 % Header
 \name{Daniel Brito}
-\tagline{Front-end developer | Writer | Visual artist}
+\tagline{Front-end and Android developer | Writer | Visual artist}
 
 % Contact
 \personalinfo{
-  \location{Ceará, Brazil}
-  \faEnvelope{\hspace{0.1cm}danielhbrito@outlook.com}\hspace{0.6cm}
-  \faGithub{\hspace{0.1cm}danielbrito.github.io}\hspace{0.6cm}
-  \faGlobe{\hspace{0.1cm}daniel-brito.blogspot.com.br}\hspace{0.6cm}
+  \location{Ceará, Brazil}\hspace{0.4cm}
+  \faEnvelope{\hspace{0.1cm}danielhbrito@outlook.com}\hspace{1cm}
+  \faGithub{\hspace{0.1cm}danielbrito.github.io}\hspace{1cm}
+  \faGlobe{\hspace{0.1cm}daniel-brito.blogspot.com.br}\hspace{1.1cm}
   \faPaperPlane{\hspace{0.1cm}danielhbrito}
 }
 
@@ -84,10 +84,9 @@
 \AtBeginEnvironment{itemize}{\small}
 
 % WORK EXPERIENCE
-\vspace{1 mm}
 \cvsection[page1sidebar]{\faBriefcase \hspace{0.3cm} Work Experience}
 
-\cvevent{OFFICE ASSISTANT}{CPFL Renováveis}{May 2011 - Feb 2017}{São Paulo, Brazil}
+\cvevent{OFFICE ASSISTANT}{CPFL Renováveis}{May 2011 - Feb 2017}{São Paulo/SP, Brazil}
 
 \begin{itemize}
 \item Correspondence flow control (ANEEL, ONS, MME etc.)
@@ -97,7 +96,7 @@
 
 \divider
 
-\cvevent{APPRENTICE}{CAMP Pinheiros / ERSA Energias Renováveis}{Jul 2009 - May 2011}{São Paulo, Brazil}
+\cvevent{APPRENTICE}{CAMP Pinheiros / ERSA Energias Renováveis}{Jul 2009 - May 2011}{São Paulo/SP, Brazil}
 
 \begin{itemize}
 \item Correspondence flow control (ANEEL, ONS, MME etc.)
@@ -107,10 +106,15 @@
 % EDUCATION
 \cvsection{\faUniversity \hspace{0.3cm} Education}
 
-\cvevent{BACHELOR OF COMPUTER SCIENCE}{Federal University of Ceará}{Jan 2017 - Dec 2020}{}
+\cvevent{BACHELOR OF COMPUTER SCIENCE}{Federal University of Ceará}{Jan 2017 - Dec 2020}{Crateús/CE, Brazil}
 \smallskip
 
-\cvevent{Scholarship student}{Program for Beginning Teachers: Academic mentoring in programming fundamentals for IT and Engineering courses.}{Mar 2019 - Dec 2019}{}
+\cvevent{Scholarship student}{Development of smart applications to the public health system}{Jan 2020 - Currently}{}
+\smallskip
+
+\vspace{1 mm}
+
+\cvevent{}{Program for Beginning Teachers: Academic mentoring in programming fundamentals for IT and Engineering courses.}{Mar 2019 - Dec 2019}{}
 \smallskip
 
 \vspace{1 mm}
@@ -123,7 +127,7 @@
 
 \divider
 
-\cvevent{TECHNOLOGIST IN SYSTEM ANALYSIS AND DEVELOPMENT}{Zona Zul Faculty of Technology}{Jan 2012 - Dec 2016}{São Paulo, Brazil}
+\cvevent{TECHNOLOGIST IN SYSTEM ANALYSIS AND DEVELOPMENT}{Zona Zul Faculty of Technology}{Jan 2012 - Dec 2016}{São Paulo/SP, Brazil}
 \begin{itemize}
 \item Unfinished.
 \end{itemize}
