--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -1,26 +1,54 @@
 % AWARDS
 \cvsection{\faTrophy \hspace{0.3cm} Awards}
 \begin{itemize}
-\item Best Work in Practical studies of 3D modeling and Virtual Reality using Blender during the 3rd edition of Encontros Universitários at the Federal University of Ceará - Crateús Campus.
+\item Best Work in "Practical studies of 3D modeling and Virtual Reality using Blender" during the 3rd edition of Encontros Universitários at the Federal University of Ceará - Crateús Campus.
 \smallskip
 \item Champion of the Slam do 13 (June 2016 edition) in the category of short poems.
 \end{itemize}
 
 % SKILLS
 \cvsection{\faCheck \hspace{0.3cm}Skills}
+\begin{itemize}
+\item Programming languages:
+\end{itemize}
+\cvtag{C}
+\cvtag{C++}
+\cvtag{Java}
+\cvtag{JavaScript}
+\cvtag{Python}
 
-\cvskill{C, Java}{4}
-\cvskill{HTML, CSS, Bootstrap}{4}
-\cvskill{Linux, Windows}{4}
-\cvskill{Photoshop, Blender}{3}
-\cvskill{Android, Flutter}{3}
-\cvskill{JavaScript, Python, C++, Git}{3}
-\cvskill{MySQL, Vue.js}{2}
 \smallskip
-\divider
 
-\cvskill{Creative writing}{5}
-\cvskill{Visual Arts}{5}
+\begin{itemize}
+\item Web development:
+\end{itemize}
+\cvtag{HTML}
+\cvtag{CSS}
+\cvtag{Bootstrap}
+\cvtag{Vue.js}
+
+\smallskip
+
+\begin{itemize}
+\item Graphic Design:
+\end{itemize}
+\cvtag{Photoshop}
+\cvtag{Blender}
+
+\smallskip
+
+\begin{itemize}
+\item Mobile development:
+\end{itemize}
+\cvtag{Android}
+
+\smallskip
+
+\begin{itemize}
+\item Other:
+\end{itemize}
+\cvtag{Creative writing}
+\cvtag{Visual Arts}
 
 \vspace{2 mm}
 
@@ -40,11 +68,11 @@
 \cvsection{\faStar \hspace{0.3cm} Projects}
 
 %\cvevent{CURRENT PROJECTS}{}{}{}
-\cvevent{HáLUGAR (Development)}{Housing app for students.}{}{}
+\cvevent{HáLUGAR (Mobile Development)}{Housing app for students.}{}{}
 \smallskip
 \cvevent{ALUMINIONS (Visual Arts)}{Creation of characters using aluminum seals.}{}{}
-\cvevent{YOUTUBE CHANNEL (Education)}{Programming tutorials for beginners.}{}{}
 \smallskip
+\cvevent{YOUTUBE CHANNEL (Education)}{Programming tutorials for beginners.}{}{}
 
 \divider
 
