--- a/main.tex
+++ b/main.tex
@@ -127,7 +127,7 @@
 
 \divider
 
-\cvevent{TECHNOLOGIST IN SYSTEM ANALYSIS AND DEVELOPMENT}{Zona Zul Faculty of Technology}{Jan 2012 - Dec 2016}{São Paulo/SP, Brazil}
+\cvevent{TECHNOLOGIST IN ANALYSIS AND SYSTEMS DEVELOPMENT}{Zona Zul Faculty of Technology}{Jan 2012 - Dec 2016}{São Paulo/SP, Brazil}
 \begin{itemize}
 \item Unfinished.
 \end{itemize}
