--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -1,4 +1,5 @@
 % AWARDS
+\vspace{0.5 mm}
 \cvsection{\faTrophy \hspace{0.3cm} Awards}
 \begin{itemize}
 \item Best Work in "Practical studies of 3D modeling and Virtual Reality using Blender" during the 3rd edition of Encontros Universitários at the Federal University of Ceará - Crateús Campus.
@@ -34,6 +35,7 @@
 \end{itemize}
 \cvtag{Photoshop}
 \cvtag{Blender}
+\cvtag{Inkscape}
 
 \smallskip
 
@@ -41,6 +43,8 @@
 \item Mobile development:
 \end{itemize}
 \cvtag{Android}
+\cvtag{Firebase}
+\cvtag{Flutter}
 
 \smallskip
 
@@ -74,6 +78,7 @@
 \smallskip
 \cvevent{YOUTUBE CHANNEL (Education)}{Programming tutorials for beginners.}{}{}
 
+\vspace{-1.5 mm}
 \divider
 
 %\cvevent{PAST PROJECTS}{}{}{}
