--- a/main.tex
+++ b/main.tex
@@ -109,7 +109,7 @@
 \cvevent{BACHELOR OF COMPUTER SCIENCE}{Federal University of Ceará}{Jan 2017 - Dec 2020}{Crateús/CE, Brazil}
 \smallskip
 
-\cvevent{Scholarship student}{Development of smart applications to the public health system}{Jan 2020 - Currently}{}
+\cvevent{Scholarship student}{Development of smart applications to the public health system.}{Jan 2020 - Currently}{}
 \smallskip
 
 \vspace{1 mm}
