--- a/main.tex
+++ b/main.tex
@@ -63,17 +63,16 @@
 \addbibresource{sample.bib}
 
 \begin{document}
-
 % Header
 \name{Daniel Brito}
-\tagline{Front-end and Android developer | Writer | Visual artist}
+\tagline{Front-end and Android developer | Visual artist | Writer}
 
 % Contact
 \personalinfo{
-  \location{Ceará, Brazil}\hspace{0.4cm}
-  \faEnvelope{\hspace{0.1cm}danielhbrito@outlook.com}\hspace{1cm}
-  \faGithub{\hspace{0.1cm}danielbrito.github.io}\hspace{1cm}
-  \faGlobe{\hspace{0.1cm}daniel-brito.blogspot.com.br}\hspace{1.1cm}
+  \location{Ceará, Brazil}\hspace{0.2cm}
+  \faEnvelope{\hspace{0.1cm}danielhbrito@outlook.com}\hspace{0.8cm}
+  \faGithub{\hspace{0.1cm}danielbrito.github.io/home}\hspace{0.8cm}
+  \faEdit{\hspace{0.1cm}daniel-brito.blogspot.com.br}\hspace{0.8cm}
   \faPaperPlane{\hspace{0.1cm}danielhbrito}
 }
 
@@ -85,6 +84,14 @@
 
 % WORK EXPERIENCE
 \cvsection[page1sidebar]{\faBriefcase \hspace{0.3cm} Work Experience}
+
+\cvevent{DEVELOPER INTERNSHIP}{Federal University of Ceará}{Jan 2020 - Currently}{Crateús/CE, Brazil}
+
+\begin{itemize}
+\item Creation of applications to the health public system management using technologies such as Android (Java), Spring Boot, MySQL, ReactJS, TypeScript, Git, Figma, and following Scrum principles.
+\end{itemize}
+
+\divider
 
 \cvevent{OFFICE ASSISTANT}{CPFL Renováveis}{May 2011 - Feb 2017}{São Paulo/SP, Brazil}
 
@@ -109,21 +116,11 @@
 \cvevent{BACHELOR OF COMPUTER SCIENCE}{Federal University of Ceará}{Jan 2017 - Dec 2020}{Crateús/CE, Brazil}
 \smallskip
 
-\cvevent{Scholarship student}{Development of smart applications to the public health system.}{Jan 2020 - Currently}{}
-\smallskip
-
-\vspace{1 mm}
-
 \cvevent{}{Program for Beginning Teachers: Academic mentoring in programming fundamentals for IT and Engineering courses.}{Mar 2019 - Dec 2019}{}
-\smallskip
-
-\vspace{1 mm}
 
 \cvevent{}{Program of Academic Initiation: Practical studies of 3D modeling and Virtual Reality using Blender.}{Apr 2018 - Dec 2018}{}
 
-\vspace{1 mm}
-
-\cvevent{}{Program of Academic Initiation: Front-end development of a platform to help students learn programming.}{Jun 2017 - Dec 2017}{}
+\cvevent{}{Program of Academic Initiation: Development of a platform to help students learn programming.}{Jun 2017 - Dec 2017}{}
 
 \divider
 
@@ -136,9 +133,7 @@
 \cvsection{\faGlobe \hspace{0.3cm}  Languages}
 \cvskill{Portuguese}{5}
 \cvskill{English}{4}
-\cvskill{French}{2}
-\cvskill{Spanish}{1}
-\cvskill{Italian}{1}
+\cvskill{French}{1}
 
 \clearpage
 
