--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -4,31 +4,34 @@
 \begin{itemize}
 \item Best Work in "Practical studies of 3D modeling and Virtual Reality using Blender" during the 3rd edition of Encontros Universitários at the Federal University of Ceará - Crateús Campus.
 \smallskip
-\item Champion of the Slam do 13 (June 2016 edition) in the category of short poems.
+\item Champion of Slam do 13 (June 2016 edition) in the short poems category.
 \end{itemize}
 
 % SKILLS
-\cvsection{\faCheck \hspace{0.3cm}Skills}
+\cvsection{\faCoffee \hspace{0.3cm}Knowledge}
 \begin{itemize}
 \item Programming languages:
 \end{itemize}
 \cvtag{C}
-\cvtag{C++}
 \cvtag{Java}
+\cvtag{C++}
 \cvtag{JavaScript}
 \cvtag{Python}
 
-\smallskip
+\vspace{2.5 mm}
 
 \begin{itemize}
-\item Web development:
+\item Mobile and Web development:
 \end{itemize}
 \cvtag{HTML}
 \cvtag{CSS}
-\cvtag{Bootstrap}
-\cvtag{Vue.js}
+\cvtag{ReactJS}
+\cvtag{TypeScript}
+\cvtag{MySQL}
+\cvtag{Android}
+\cvtag{Firebase}
 
-\smallskip
+\vspace{2.5 mm}
 
 \begin{itemize}
 \item Graphic Design:
@@ -36,31 +39,23 @@
 \cvtag{Photoshop}
 \cvtag{Blender}
 \cvtag{Inkscape}
+\cvtag{Figma}
 
-\smallskip
-
-\begin{itemize}
-\item Mobile development:
-\end{itemize}
-\cvtag{Android}
-\cvtag{Firebase}
-\cvtag{Flutter}
-
-\smallskip
+\vspace{2.5 mm}
 
 \begin{itemize}
-\item Other:
+\item Soft skills:
 \end{itemize}
-\cvtag{Creative writing}
-\cvtag{Visual Arts}
+\cvtag{Communication}
+\cvtag{Teamwork}
 
-\vspace{2 mm}
+\vspace{3 mm}
 
 % BOOKS
 \cvsection{\faBook \hspace{0.3cm} Publications}
-\cvevent{A LER VAZIOS}{Poetic-visual experiments}{2016}{}
+\cvevent{A LER VAZIOS}{Compilation of poetic-visual experiments.}{2016}{}
 \smallskip
-\cvevent{PROTESTIZANDO}{Compilation of poems}{2015}{}
+\cvevent{PROTESTIZANDO}{Compilation of poems.}{2015}{}
 \smallskip
 \cvevent{ANTHOLOGIES}{}{}{}
 \begin{itemize}
@@ -72,14 +67,10 @@
 \cvsection{\faStar \hspace{0.3cm} Projects}
 
 %\cvevent{CURRENT PROJECTS}{}{}{}
-\cvevent{HáLUGAR (Mobile Development)}{Housing app for students.}{}{}
+\cvevent{HáLUGAR (Mobile Development)}{Housing app for students. Available on Play Store.}{}{}
 \smallskip
 \cvevent{ALUMINIONS (Visual Arts)}{Creation of characters using aluminum seals.}{}{}
 \smallskip
 \cvevent{YOUTUBE CHANNEL (Education)}{Programming tutorials for beginners.}{}{}
-
-\vspace{-1.5 mm}
-\divider
-
-%\cvevent{PAST PROJECTS}{}{}{}
-\cvevent{SARAU DO GRAJAÚ (Artivism)}{Mediation of meetings.}{}{}
+\smallskip
+\cvevent{COMPIXELAR (Creative Coding)}{Development of multimedia experiments using Processing.}{}{}
