--- a/main.tex
+++ b/main.tex
@@ -88,7 +88,7 @@
 \cvevent{DEVELOPER INTERNSHIP}{Federal University of Ceará}{Jan 2020 - Currently}{Crateús/CE, Brazil}
 
 \begin{itemize}
-\item Creation of applications to the health public system management using technologies such as Android (Java), Spring Boot, MySQL, ReactJS, TypeScript, Git, Figma, and following Scrum principles.
+\item Development of applications to the health public system management using technologies such as Android (Java), Spring Boot, ReactJS, MySQL, TypeScript, Git, and Figma. Also following Scrum principles.
 \end{itemize}
 
 \divider
@@ -116,11 +116,11 @@
 \cvevent{BACHELOR OF COMPUTER SCIENCE}{Federal University of Ceará}{Jan 2017 - Dec 2020}{Crateús/CE, Brazil}
 \smallskip
 
-\cvevent{}{Program for Beginning Teachers: Academic mentoring in programming fundamentals for IT and Engineering courses.}{Mar 2019 - Dec 2019}{}
+\cvevent{}{Program for Beginning Teachers: Academic mentoring in programming (C and Python) for IT and Engineering courses.}{Mar 2019 - Dec 2019}{}
 
 \cvevent{}{Program of Academic Initiation: Practical studies of 3D modeling and Virtual Reality using Blender.}{Apr 2018 - Dec 2018}{}
 
-\cvevent{}{Program of Academic Initiation: Development of a platform to help students learn programming.}{Jun 2017 - Dec 2017}{}
+\cvevent{}{Program of Academic Initiation: Platform development to help students learn to program, using HTML, CSS, and AngularJS.}{Jun 2017 - Dec 2017}{}
 
 \divider
 
