--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -7,8 +7,10 @@
 \item Champion of Slam do 13 (June 2016 edition) in the short poems category.
 \end{itemize}
 
+\vspace{1.5 mm}
+
 % SKILLS
-\cvsection{\faCoffee \hspace{0.3cm}Knowledge}
+\cvsection{\faCoffee \hspace{0.3cm}Skills}
 \begin{itemize}
 \item Programming languages:
 \end{itemize}
@@ -30,6 +32,7 @@
 \cvtag{MySQL}
 \cvtag{Android}
 \cvtag{Firebase}
+\cvtag{Git}
 
 \vspace{2.5 mm}
 
@@ -62,6 +65,8 @@
 \item Poesia na Faixa (Poetas do Tietê)
 \item 180 gramas (Sarau do Vinil)
 \end{itemize}
+
+\vspace{1.5 mm}
 
 % PROJECTS
 \cvsection{\faStar \hspace{0.3cm} Projects}
