--- a/main.tex
+++ b/main.tex
@@ -66,13 +66,12 @@
 % Header
 \name{Daniel Brito}
 \tagline{Front-end and Android developer | Visual artist | Writer}
-
 % Contact
 \personalinfo{
-  \location{Ceará, Brazil}\hspace{0.2cm}
-  \faEnvelope{\hspace{0.1cm}danielhbrito@outlook.com}\hspace{0.8cm}
-  \faGithub{\hspace{0.1cm}danielbrito.github.io/home}\hspace{0.8cm}
-  \faEdit{\hspace{0.1cm}daniel-brito.blogspot.com.br}\hspace{0.8cm}
+  \location{Ceará, Brazil}\hspace{0.8cm}
+  \faEnvelope{\hspace{0.1cm}danielhbrito@outlook.com}\hspace{1.29cm}
+  \faGithub{\hspace{0.1cm}danielbrito.github.io/home}\hspace{1.29cm}
+  \faLinkedin{\hspace{0.1cm}daniel-brito}\hspace{1.29cm}
   \faPaperPlane{\hspace{0.1cm}danielhbrito}
 }
 
@@ -85,10 +84,10 @@
 % WORK EXPERIENCE
 \cvsection[page1sidebar]{\faBriefcase \hspace{0.3cm} Work Experience}
 
-\cvevent{DEVELOPER INTERNSHIP}{Federal University of Ceará}{Jan 2020 - Currently}{Crateús/CE, Brazil}
+\cvevent{DEVELOPER INTERNSHIP}{Federal University of Ceará (UFC)}{Jan 2020 - Currently}{Crateús/CE, Brazil}
 
 \begin{itemize}
-\item Development of applications to the health public system management using technologies such as Android (Java), Spring Boot, ReactJS, MySQL, TypeScript, Git, and Figma. Also following Scrum principles.
+\item Development of web and mobile applications to the health public system management, using technologies such as Android (Java), Spring Boot, ReactJS, Material-UI, MySQL, TypeScript, Git/GitLab, Figma, and also following Scrum principles.
 \end{itemize}
 
 \divider
@@ -96,9 +95,9 @@
 \cvevent{OFFICE ASSISTANT}{CPFL Renováveis}{May 2011 - Feb 2017}{São Paulo/SP, Brazil}
 
 \begin{itemize}
-\item Correspondence flow control (ANEEL, ONS, MME etc.)
-\item Payments (taxes, associative contributions, consulting etc.)
-\item Informative (Diário Oficial da União, Canal Energia etc.)
+\item Correspondence flow control (ANEEL, ONS, MME).
+\item Payments (taxes, associative contributions, consulting).
+\item Informative (Diário Oficial da União, Canal Energia).
 \end{itemize}
 
 \divider
@@ -106,15 +105,16 @@
 \cvevent{APPRENTICE}{CAMP Pinheiros / ERSA Energias Renováveis}{Jul 2009 - May 2011}{São Paulo/SP, Brazil}
 
 \begin{itemize}
-\item Correspondence flow control (ANEEL, ONS, MME etc.)
-\item Informative (Diário Oficial da União, Canal Energia etc.)
+\item General administrative tasks.
 \end{itemize}
 
 % EDUCATION
 \cvsection{\faUniversity \hspace{0.3cm} Education}
 
-\cvevent{BACHELOR OF COMPUTER SCIENCE}{Federal University of Ceará}{Jan 2017 - Dec 2020}{Crateús/CE, Brazil}
+\cvevent{BACHELOR OF COMPUTER SCIENCE}{Federal University of Ceará (UFC)}{Jan 2017 - Dec 2020}{Crateús/CE, Brazil}
 \smallskip
+
+\cvevent{}{Member of GEMP, a group of studies for the SBC Programming Marathon.}{Jun 2020 - Currently}{}
 
 \cvevent{}{Program for Beginning Teachers: Academic mentoring in programming (C and Python) for IT and Engineering courses.}{Mar 2019 - Dec 2019}{}
 
@@ -124,7 +124,7 @@
 
 \divider
 
-\cvevent{TECHNOLOGIST IN ANALYSIS AND SYSTEMS DEVELOPMENT}{Zona Zul Faculty of Technology}{Jan 2012 - Dec 2016}{São Paulo/SP, Brazil}
+\cvevent{TECHNOLOGIST IN ANALYSIS AND SYSTEMS DEVELOPMENT}{Zona Zul Faculty of Technology (FATEC)}{Jan 2012 - Dec 2016}{São Paulo/SP, Brazil}
 \begin{itemize}
 \item Unfinished.
 \end{itemize}
