--- a/resume.tex
+++ b/resume.tex
@@ -194,7 +194,7 @@
     \divider
       
     \resumeSubheading
-      {Faculty of Tecnology}{\faMapMarker \hspace{0.1cm} São Paulo, SP}
+      {Faculty of Technology}{\faMapMarker \hspace{0.1cm} São Paulo, SP}
       {Technologist in Analysis and Systems Development}{\faCalendar \hspace{0.1cm} 2012 - 2016}
       \begin{itemize}
           \item Unfinished.
@@ -230,7 +230,7 @@
 %-----------PROJECTS-----------------
 \section{\faRocket \hspace{0.2cm} Projects}
   \resumeSubHeadingListStart
-    \resumeSubItem{Tecnology}{}
+    \resumeSubItem{Technology}{}
         \begin{itemize}
             \item \textbf{HáLugar:} Housing app for students. \href{https://play.google.com/store/apps/details?id=br.ufc.crateus.halugar}{\faInfoCircle}
             \item \textbf{Compixelar:} Development of multimedia experiments using Processing. \href{https://medium.com/@danielhbrito}{\faInfoCircle}
