--- a/resume.tex
+++ b/resume.tex
@@ -251,7 +251,7 @@
 \section{\faTrophy \hspace{0.2cm} Awards}
   \resumeSubHeadingListStart
     \resumeSubItem{Best Work:}
-      {Practical studies of 3D modeling and Virtual Reality using Blender" during the 3rd edition of Encontros Universitários at the Federal University of Ceará - Crateús Campus.}
+      {Project "Practical studies of 3D modeling and Virtual Reality using Blender" during the 3rd edition of Encontros Universitários at the Federal University of Ceará - Crateús Campus.}
     \resumeSubItem{13nho:}
       {Champion of Slam do 13 (June 2016 edition) in the short poems category.}
     \vspace{0.3cm}
