--- a/resume.tex
+++ b/resume.tex
@@ -101,7 +101,7 @@
 \begin{document}
 
 %----------HEADING-----------------
-\textbf{\huge DANIEL BRITO} \\ 
+\textbf{\huge Daniel Brito} \\ 
 \textbf{Front-end and Android developer • Visual artist • Writer} \\
   
 \vspace{0.2cm}
@@ -118,13 +118,13 @@
 \vspace{0.3cm}
 
 %--------PROFILE------------
-\section{\faUser \hspace{0.2cm} Profile}
+\section{\faUser \hspace{0.2cm} \Large Profile}
 Passionate about learning and creating things, both in the fields of technology and art. Currently, focusing on topics concerning front-end development of web and mobile applications, but searching for opportunities to follow the steps to become a full-stack developer.
 
 \vspace{0.4cm}
 
 %-----------EXPERIENCE-----------------
-\section{\faBriefcase \hspace{0.2cm} Experience}
+\section{\faBriefcase \hspace{0.2cm} \Large Experience}
     \resumeSubHeadingListStart
         \resumeSubheading
         {Federal University of Ceará}{\faMapMarker \hspace{0.1cm} Crateús, CE}
@@ -154,7 +154,7 @@ Passionate about learning and creating things, both in the fields of technology 
     \resumeSubHeadingListEnd
 
 %-----------EDUCATION-----------------
-\section{\faUniversity \hspace{0.2cm} Education}
+\section{\faGraduationCap \hspace{0.2cm} \Large Education}
     \resumeSubHeadingListStart
         \resumeSubheading
         {Federal University of Ceará}{\faMapMarker \hspace{0.1cm} Crateús, CE}
@@ -196,7 +196,7 @@ Passionate about learning and creating things, both in the fields of technology 
 \end{tabular}
 
 %--------SKILLS------------
-\section{\faPuzzlePiece \hspace{0.2cm} Skills}
+\section{\faPuzzlePiece \hspace{0.2cm} \Large Skills}
     Main knowledge that I've been acquiring while studying and working on personal and professional projects as a software developer.
     \resumeSubHeadingListStart
         \resumeSubItem {Programming Languages:}{C, Java, C++, JavaScript, Python.}
@@ -212,11 +212,11 @@ Passionate about learning and creating things, both in the fields of technology 
     \vspace{0.3cm}
 
 %-----------PROJECTS-----------------
-\section{\faRocket \hspace{0.2cm} Projects}
+\section{\faRocket \hspace{0.2cm} \Large Projects}
     \resumeSubHeadingListStart
         \resumeSubItem{Technology}{}
             \begin{itemize}
-                \item \textbf{HáLugar:} Housing app for students. Developed for Android platform, using technologies such as Nominatim API, Google Maps, PhotoView, and Firebase (Auth, Realtime Database, Storage). \href{https://play.google.com/store/apps/details?id=br.ufc.crateus.halugar}{\faInfoCircle}
+                \item \textbf{HáLugar:} Housing app for students. Developed for Android platform, using technologies such as Google Maps, Nominatim API, PhotoView, and Firebase (Auth, Realtime Database, Storage). \href{https://play.google.com/store/apps/details?id=br.ufc.crateus.halugar}{\faInfoCircle}
                 \item \textbf{Compixelar:} Development of multimedia experiments using Processing. \href{https://medium.com/@danielhbrito}{\faInfoCircle}
             \end{itemize}
             
@@ -235,7 +235,7 @@ Passionate about learning and creating things, both in the fields of technology 
     \resumeSubHeadingListEnd
   
 %-----------AWARDS-----------------
-\section{\faTrophy \hspace{0.2cm} Awards}
+\section{\faTrophy \hspace{0.2cm} \Large Awards}
     \resumeSubHeadingListStart
         \resumeSubItem{Best Work:}
         {Project ``Practical studies of 3D modeling and Virtual Reality using Blender'' during the 3rd edition of Encontros Universitários at the Federal University of Ceará - Crateús Campus.}
@@ -247,7 +247,7 @@ Passionate about learning and creating things, both in the fields of technology 
   \resumeSubHeadingListEnd
 
 %-----------PUBLICATIONS-----------------
-\section{\faRocket \hspace{0.2cm} Publications}
+\section{\faBook \hspace{0.2cm} \Large Publications}
     \resumeSubHeadingListStart
         \resumeSubItem{Books}{}
             \begin{itemize}
@@ -264,7 +264,7 @@ Passionate about learning and creating things, both in the fields of technology 
     \resumeSubHeadingListEnd
 
 %-----------WORKSHOPS-----------------
-\section{\faUsers \hspace{0.2cm} Workshops}
+\section{\faUsers \hspace{0.2cm} \Large Workshops}
     \resumeSubHeadingListStart
         \resumeWorkshops
             {Introduction to Digital Art with Blender:}{\faMapMarker \hspace{0.1cm} Federal University of Ceará}
@@ -274,7 +274,7 @@ Passionate about learning and creating things, both in the fields of technology 
     \resumeSubHeadingListEnd
 
 %-----------OTHER INTERESTS-----------------
-\section{\faHeart \hspace{0.2cm} Other Interests}
+\section{\faHeart \hspace{0.2cm} \Large Other Interests}
     Generative design, chess, competitive programming, astronomy, philosophy, literature, sports, travelling, cinema.
   
 %-------------------------------------------
