External link icon

--- a/resume.tex
+++ b/resume.tex
@@ -179,7 +179,7 @@ Passionate about learning and creating things, both in the fields of technology 
         \begin{itemize}
             \item \textbf{Volunteer}
                 \begin{itemize}
-                    \item \textbf{GEMP:} Group of studies for the SBC Programming Marathon. \href{https://github.com/GEMP-UFC-Crateus}{\faInfoCircle}
+                    \item \textbf{GEMP:} Group of studies for the SBC Programming Marathon. \href{https://github.com/GEMP-UFC-Crateus}{\small \faExternalLink}
                 \end{itemize}
         \end{itemize}
         
@@ -216,19 +216,19 @@ Passionate about learning and creating things, both in the fields of technology 
     \resumeSubHeadingListStart
         \resumeSubItem{Technology}{}
             \begin{itemize}
-                \item \textbf{HáLugar:} Housing app for students. Developed for Android platform, using technologies such as Google Maps, Nominatim API, PhotoView, and Firebase (Auth, Realtime Database, Storage). \href{https://play.google.com/store/apps/details?id=br.ufc.crateus.halugar}{\faInfoCircle}
-                \item \textbf{Compixelar:} Development of multimedia experiments using Processing. \href{https://medium.com/@danielhbrito}{\faInfoCircle}
+                \item \textbf{HáLugar:} Housing app for students. Developed for Android platform, using technologies such as Google Maps, Nominatim API, PhotoView, and Firebase (Auth, Realtime Database, Storage). \href{https://play.google.com/store/apps/details?id=br.ufc.crateus.halugar}{\small \faExternalLink}
+                \item \textbf{Compixelar:} Development of multimedia experiments using Processing. \href{https://medium.com/@danielhbrito}{\small \faExternalLink}
             \end{itemize}
             
         \resumeSubItem{Education}{}
             \begin{itemize}
-                \item \textbf{sTuring:} Scientific divulgation. \href{https://www.instagram.com/sturing.compsci/}{\faInfoCircle}
-                \item \textbf{YouTube Channel:}  Programming tutorials for beginners. \href{https://www.youtube.com/channel/UC4y3uq1d7MKDYs1LbI44Vng}{\faInfoCircle}
+                \item \textbf{sTuring:} Scientific divulgation. \href{https://www.instagram.com/sturing.compsci/}{\small \faExternalLink}
+                \item \textbf{YouTube Channel:}  Programming tutorials for beginners. \href{https://www.youtube.com/channel/UC4y3uq1d7MKDYs1LbI44Vng}{\small \faExternalLink}
             \end{itemize}
             
         \resumeSubItem{Art}{}
             \begin{itemize}
-                \item \textbf{Aluminions:} Creation of characters using aluminum seals. \href{https://www.instagram.com/aluminions.13/}{\faInfoCircle}
+                \item \textbf{Aluminions:} Creation of characters using aluminum seals. \href{https://www.instagram.com/aluminions.13/}{\small \faExternalLink}
             \end{itemize}
         
         \vspace{0.2cm}
