--- a/resume.tex
+++ b/resume.tex
@@ -119,7 +119,7 @@
 
 %--------PROFILE------------
 \section{\faUser \hspace{0.2cm} \Large Profile}
-Passionate about learning and creating things, both in the fields of technology and art. Currently, focusing on topics concerning front-end development of web and mobile applications, but searching for opportunities to follow the steps to become a full-stack developer.
+Passionate about learning and creating things, both in the fields of art and technology. Currently, focusing on topics concerning front-end development of web and mobile applications, but searching for opportunities to follow the steps to become a full-stack developer.
 
 \vspace{0.4cm}
 
@@ -133,10 +133,10 @@ Passionate about learning and creating things, both in the fields of technology 
         \begin{itemize}
             \item Our team developed a web and mobile application to optimize the patient admission process at the Pró-Hemoce Institute. Despite the affinity for learning front-end subjects, there was also a contact with technologies and concepts related to the back-end and DevOps. During this process, we followed some agile methodologies principles, such as Scrum and Kanban. \\
             \begin{itemize}
-                \item Android (Java), Retrofit, RealmDB.
-                \item UI/UX Design, Figma, ReactJS, Redux, TypeScript, Material-UI.
-                \item Spring Framework, Hibernate, MySQL, FlyWay, Docker, JWT, Keycloak, MinIO, MQTT.
-                \item Git, GitLab.
+                \item \textbf{Mobile:} Android (Java), Retrofit, RealmDB.
+                \item \textbf{Web:} UI/UX Design, Figma, ReactJS, Redux, TypeScript, Material-UI.
+                \item \textbf{Server:} Spring Framework, Hibernate, MySQL, FlyWay, JWT, Keycloak, MinIO, MQTT.
+                \item \textbf{DevOps:} Docker, Git, GitLab.
             \end{itemize}
         \end{itemize}
       
@@ -144,10 +144,10 @@ Passionate about learning and creating things, both in the fields of technology 
     {CPFL Renováveis}{\faMapMarker \hspace{0.1cm} São Paulo, SP}
     {Office Assistant}{\faCalendar \hspace{0.1cm} May 2011 - Feb 2017}
         \begin{itemize}
-            \item Correspondence flow control (ANEEL, ONS, MME).
-            \item Payments (taxes, associative contributions, consulting, SAP ERP).
-            \item Informative (Diário Oficial da União, Canal Energia).
-            \item External services.
+            \item Correspondence flow control (Excel, archive).
+            \item Payments (SAP ERP, taxes, associative contributions, consulting).
+            \item Mailing of daily news (Diário Oficial da União, Canal Energia).
+            \item External services (Notary's office)
         \end{itemize}
         
         \vspace{0.2cm}
@@ -158,13 +158,13 @@ Passionate about learning and creating things, both in the fields of technology 
     \resumeSubHeadingListStart
         \resumeSubheading
         {Federal University of Ceará}{\faMapMarker \hspace{0.1cm} Crateús, CE}
-        {Bachelor in Computer Science}{\faCalendar \hspace{0.1cm} 2017 - 2021}
+        {Bachelor of Computer Science}{\faCalendar \hspace{0.1cm} 2017 - 2021}
         \begin{itemize}
             \item \textbf{Scholarships}
                 \begin{itemize}
                     \resumeScholarship
                     {Program for Beginning Teachers:}{\faCalendar \hspace{0.1cm} \small Feb 2019 - Dec 2019}
-                    {Academic mentoring for IT and engineering courses (C and Python).}{}
+                    {Academic mentoring for IT and engineering students (C and Python).}{}
             
                     \resumeScholarship
                     {Program of Academic Initiation:}{\faCalendar \hspace{0.1cm} \small Apr 2018 - Dec 2018}
@@ -179,7 +179,7 @@ Passionate about learning and creating things, both in the fields of technology 
         \begin{itemize}
             \item \textbf{Volunteer}
                 \begin{itemize}
-                    \item \textbf{GEMP:} Group of studies for the SBC Programming Marathon. \href{https://github.com/GEMP-UFC-Crateus}{\small \faExternalLink}
+                    \item \textbf{GEMP:} Group of studies for the SBC Programming Marathon. \href{https://github.com/GEMP-UFC-Crateus}{\scriptsize \faExternalLink}
                 \end{itemize}
         \end{itemize}
         
@@ -197,10 +197,10 @@ Passionate about learning and creating things, both in the fields of technology 
 
 %--------SKILLS------------
 \section{\faPuzzlePiece \hspace{0.2cm} \Large Skills}
-    Main knowledge that I've been acquiring while studying and working on personal and professional projects as a software developer.
+    Besides learning other topics, these are the main knowledge that I've been applying while working on personal and professional projects as a software developer.
     \resumeSubHeadingListStart
         \resumeSubItem {Programming Languages:}{C, Java, C++, JavaScript, Python.}
-        \resumeSubItem {Front-end:}{HTML, CSS, Bootstrap, Material-UI, ReactJS, Styled Components, TypeScript, Sass, JQuery.}
+        \resumeSubItem {Front-end:}{HTML, CSS, Bootstrap, Material-UI, ReactJS, Styled Components, TypeScript.}
         \resumeSubItem {Graphic Design:}{Figma, Photoshop, Inkscape, Blender.}
         \resumeSubItem {Mobile:}{Android, Retrofit, RealmDB.}
         \resumeSubItem {Back-end:}{Firebase, Spring Framework, MySQL.}
@@ -216,19 +216,19 @@ Passionate about learning and creating things, both in the fields of technology 
     \resumeSubHeadingListStart
         \resumeSubItem{Technology}{}
             \begin{itemize}
-                \item \textbf{HáLugar:} Housing app for students. Developed for Android platform, using technologies such as Google Maps, Nominatim API, PhotoView, and Firebase (Auth, Realtime Database, Storage). \href{https://play.google.com/store/apps/details?id=br.ufc.crateus.halugar}{\small \faExternalLink}
-                \item \textbf{Compixelar:} Development of multimedia experiments using Processing. \href{https://medium.com/@danielhbrito}{\small \faExternalLink}
+                \item \textbf{HáLugar:} Housing app for students. Developed for Android platform, using technologies such as Google Maps, Nominatim API, PhotoView, and Firebase (Auth, Realtime Database, Storage). \href{https://play.google.com/store/apps/details?id=br.ufc.crateus.halugar}{\scriptsize \faExternalLink}
+                \item \textbf{Compixelar:} Development of multimedia experiments using Processing. \href{https://medium.com/@danielhbrito}{\scriptsize \faExternalLink}
             \end{itemize}
             
         \resumeSubItem{Education}{}
             \begin{itemize}
-                \item \textbf{sTuring:} Scientific divulgation. \href{https://www.instagram.com/sturing.compsci/}{\small \faExternalLink}
-                \item \textbf{YouTube Channel:}  Programming tutorials for beginners. \href{https://www.youtube.com/channel/UC4y3uq1d7MKDYs1LbI44Vng}{\small \faExternalLink}
+                \item \textbf{sTuring:} Scientific divulgation. \href{https://www.instagram.com/sturing.compsci/}{\scriptsize \faExternalLink}
+                \item \textbf{YouTube Channel:}  Programming tutorials for beginners. \href{https://www.youtube.com/channel/UC4y3uq1d7MKDYs1LbI44Vng}{\scriptsize \faExternalLink}
             \end{itemize}
             
         \resumeSubItem{Art}{}
             \begin{itemize}
-                \item \textbf{Aluminions:} Creation of characters using aluminum seals. \href{https://www.instagram.com/aluminions.13/}{\small \faExternalLink}
+                \item \textbf{Aluminions:} Creation of characters using aluminum seals. \href{https://www.instagram.com/aluminions.13/}{\scriptsize \faExternalLink}
             \end{itemize}
         
         \vspace{0.2cm}
@@ -239,9 +239,6 @@ Passionate about learning and creating things, both in the fields of technology 
     \resumeSubHeadingListStart
         \resumeSubItem{Best Work:}
         {Project ``Practical studies of 3D modeling and Virtual Reality using Blender'' during the 3rd edition of Encontros Universitários at the Federal University of Ceará - Crateús Campus.}
-        
-        \resumeSubItem{13nho:}
-        {Champion of Slam do 13 (June 2016 edition) in the short poems category.}
     
         \vspace{0.6cm}
   \resumeSubHeadingListEnd
@@ -251,13 +248,13 @@ Passionate about learning and creating things, both in the fields of technology 
     \resumeSubHeadingListStart
         \resumeSubItem{Books}{}
             \begin{itemize}
-                \item \textbf{A Ler Vazios:} Poetic and visual experiments.
-                \item \textbf{Protestizando:} Compilation of poems.
+                \item \textbf{A Ler Vazios:} Poetic and visual experiments. \hfill \faCalendar \hspace{0.1cm} 2016
+                \item \textbf{Protestizando:} Compilation of first poems. \hfill \faCalendar \hspace{0.1cm} 2015
             \end{itemize}
         \resumeSubItem{Anthologies}{}
             \begin{itemize}
-                \item \textbf{Poesia na Faixa:} Organized by Poetas do Tietê.
-                \item \textbf{180 Gramas:} Organized by Sarau do Vinil.
+                \item \textbf{180 Gramas:} Organized by Sarau do Vinil. \hfill \faCalendar \hspace{0.1cm} 2016
+                \item \textbf{Poesia na Faixa:} Organized by Poetas do Tietê. \hfill \faCalendar \hspace{0.1cm} 2015
             \end{itemize}
     
         \vspace{0.2cm}
